@@ -1,4 +1,5 @@
-07122013 -> jonnyboy -> fixed a bug when switch nntp provider and groups not available or invalid first_post
+07122013 -> jonnyboy -> nzb-import and grabNZBs now use site edit Crosspost time
+						fixed a bug when switch nntp provider and groups not available or invalid first_post
 07112013 -> jonnyboy -> tmux -added option to use removecrapreleases all or just 1 setting
 						fixed bug in postprocess_threaded.py
 07112013 -> jonnyboy -> added 3 loop limit to releases stage4567
